--- a/portfolio.html
+++ b/portfolio.html
@@ -84,8 +84,10 @@
                 height="294"
               />
               <a href=""></a>
-              <h2 class="portfolio-hero-section-title">Технокряк</h2>
-              <p class="portfolio-hero-section-subtitle">Веб-сайт</p>
+              <div class="portfolio-hero-list-content">
+                <h2 class="portfolio-hero-section-title">Технокряк</h2>
+                <p class="portfolio-hero-section-subtitle">Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -96,10 +98,12 @@
                 height="294"
               />
               <a href=""></a>
-              <h2 class="portfolio-hero-section-title">
-                Постер <span lang="en">New Orlean vs Golden Star</span>
-              </h2>
-              <p class="portfolio-hero-section-subtitle">Дизайн</p>
+              <div class="portfolio-hero-list-content">
+                <h2 class="portfolio-hero-section-title">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h2>
+                <p class="portfolio-hero-section-subtitle">Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -110,10 +114,12 @@
                 height="294"
               />
               <a href=""></a>
-              <h2 class="portfolio-hero-section-title">
-                Ресторан<span lang="en"> Seafood</span>
-              </h2>
-              <p class="portfolio-hero-section-subtitle">Приложение</p>
+              <div class="portfolio-hero-list-content">
+                <h2 class="portfolio-hero-section-title">
+                  Ресторан<span lang="en"> Seafood</span>
+                </h2>
+                <p class="portfolio-hero-section-subtitle">Приложение</p>
+              </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -124,10 +130,11 @@
                 height="294"
               />
               <a href=""></a>
-              <h2 class="portfolio-hero-section-title">
+              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title">
                 Проект<span lang="en"> Prime</span>
               </h2>
               <p class="portfolio-hero-section-subtitle">Маркетинг</p>
+            </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -138,10 +145,11 @@
                 height="294"
               />
               <a href=""></a>
-              <h2 class="portfolio-hero-section-title">
+              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title">
                 Проект <span lang="en">Boxes</span>
               </h2>
               <p class="portfolio-hero-section-subtitle">Приложение</p>
+            </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -152,10 +160,11 @@
                 height="294"
               />
               <a href=""></a>
-              <h2 class="portfolio-hero-section-title" lang="en">
+              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title" lang="en">
                 Inspiration has no Borders
               </h2>
               <p class="portfolio-hero-section-subtitle">Веб-сайт</p>
+            </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -166,10 +175,11 @@
                 height="294"
               />
               <a href=""></a>
-              <h2 class="portfolio-hero-section-title">
+              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title">
                 Издание <span lang="en">Limited Edition</span>
               </h2>
               <p class="portfolio-hero-section-subtitle">Дизайн</p>
+            </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -180,10 +190,11 @@
                 height="294"
               />
               <a href=""></a>
-              <h2 class="portfolio-hero-section-title">
+              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title">
                 Проект <span lang="en">LAB</span>
               </h2>
               <p class="portfolio-hero-section-subtitle">Маркетинг</p>
+            </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -194,10 +205,12 @@
                 height="294"
               />
               <a href=""></a>
-              <h2 class="portfolio-hero-section-title" lang="en">
+              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title" lang="en">
                 Growing Business
               </h2>
               <p class="portfolio-hero-section-subtitle">Приложение</p>
+            </div>
+
             </li>
           </ul>
         </div>
