--- a/portfolio.html
+++ b/portfolio.html
@@ -130,11 +130,12 @@
                 height="294"
               />
               <a href=""></a>
-              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title">
-                Проект<span lang="en"> Prime</span>
-              </h2>
-              <p class="portfolio-hero-section-subtitle">Маркетинг</p>
-            </div>
+              <div class="portfolio-hero-list-content">
+                <h2 class="portfolio-hero-section-title">
+                  Проект<span lang="en"> Prime</span>
+                </h2>
+                <p class="portfolio-hero-section-subtitle">Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -145,11 +146,12 @@
                 height="294"
               />
               <a href=""></a>
-              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title">
-                Проект <span lang="en">Boxes</span>
-              </h2>
-              <p class="portfolio-hero-section-subtitle">Приложение</p>
-            </div>
+              <div class="portfolio-hero-list-content">
+                <h2 class="portfolio-hero-section-title">
+                  Проект <span lang="en">Boxes</span>
+                </h2>
+                <p class="portfolio-hero-section-subtitle">Приложение</p>
+              </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -160,11 +162,12 @@
                 height="294"
               />
               <a href=""></a>
-              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title" lang="en">
-                Inspiration has no Borders
-              </h2>
-              <p class="portfolio-hero-section-subtitle">Веб-сайт</p>
-            </div>
+              <div class="portfolio-hero-list-content">
+                <h2 class="portfolio-hero-section-title" lang="en">
+                  Inspiration has no Borders
+                </h2>
+                <p class="portfolio-hero-section-subtitle">Веб-сайт</p>
+              </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -175,11 +178,12 @@
                 height="294"
               />
               <a href=""></a>
-              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title">
-                Издание <span lang="en">Limited Edition</span>
-              </h2>
-              <p class="portfolio-hero-section-subtitle">Дизайн</p>
-            </div>
+              <div class="portfolio-hero-list-content">
+                <h2 class="portfolio-hero-section-title">
+                  Издание <span lang="en">Limited Edition</span>
+                </h2>
+                <p class="portfolio-hero-section-subtitle">Дизайн</p>
+              </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -190,11 +194,12 @@
                 height="294"
               />
               <a href=""></a>
-              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title">
-                Проект <span lang="en">LAB</span>
-              </h2>
-              <p class="portfolio-hero-section-subtitle">Маркетинг</p>
-            </div>
+              <div class="portfolio-hero-list-content">
+                <h2 class="portfolio-hero-section-title">
+                  Проект <span lang="en">LAB</span>
+                </h2>
+                <p class="portfolio-hero-section-subtitle">Маркетинг</p>
+              </div>
             </li>
             <li class="portfolio-hero-list-item">
               <img
@@ -205,12 +210,12 @@
                 height="294"
               />
               <a href=""></a>
-              <div class="portfolio-hero-list-content"><h2 class="portfolio-hero-section-title" lang="en">
-                Growing Business
-              </h2>
-              <p class="portfolio-hero-section-subtitle">Приложение</p>
-            </div>
-
+              <div class="portfolio-hero-list-content">
+                <h2 class="portfolio-hero-section-title" lang="en">
+                  Growing Business
+                </h2>
+                <p class="portfolio-hero-section-subtitle">Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
